--- a/styles/style.css
+++ b/styles/style.css
@@ -27,4 +27,32 @@ body {
 font-family: rubik, sans-serif;
 font-size: 16px;
 line-height: 24px;
+color: #242424;
+background-color: #fbf7f4;
+}
+
+.page-header{
+  color: #000000;
+  background-color: #FFE17F;
+}
+
+.navigation-link{
+  font-family: rubik, sans-serif;
+  font-size: 16px;
+  line-height: 30px;
+  color: inherit;
+  align-items: center;
+  text-decoration: none;
+  font-weight: 400;
+}
+.navigation-link-2{
+  font-family: raleway;
+  font-size: 18px;
+  line-height: 21px;
+  color: inherit;
+  align-items: center;
+  text-decoration: none;
+  font-weight: 800;
+  text-transform: uppercase;
+
 }
