--- a/styles/style.css
+++ b/styles/style.css
@@ -22,13 +22,13 @@
   src: url(/fonts/rubik/rubik-700.woff2) format("woff2");
   font-display: swap;
 }
-
+/*Главная страница*/
 body {
 font-family: 'Rubik', sans-serif;
 font-size: 16px;
 line-height: 24px;
 color: #242424;
-background-color: #fbf7f4;
+background-color: #FFFFFF;
 }
 
 .page-header{
@@ -57,7 +57,7 @@ background-color: #fbf7f4;
 }
 .main-index{
   color: #242424;
-  background-color: #fbf7f4;
+  background-color: #FFFFFF;
 }
 
 .device-title{
@@ -340,4 +340,166 @@ background-color: #fbf7f4;
   line-height: 20px;
   text-decoration-line: underline;
   color: #FFFFFF;
+}
+/*Каталог*/
+.site-search-form{
+  font-family: 'Rubik' sans-serif;
+  font-style: normal;
+  font-weight: 400;
+  font-size: 16px;
+  line-height: 20px;
+  align-items: center;
+  color: #000000;
+}
+.inner-header-title{
+  font-family: 'Raleway' sans-serif;
+  font-style: normal;
+  font-weight: 800;
+  font-size: 50px;
+  line-height: 50px;
+  color: #000000;
+}
+.breadcrums-link{
+  font-family: 'Rubik' sans-serif;
+  font-style: normal;
+  font-weight: 400;
+  font-size: 16px;
+  line-height: 20px;
+  text-decoration: none;
+  color: #000000;
+}
+.filter{
+  font-family: 'Raleway' sans-serif;
+  font-style: normal;
+  font-weight: 800;
+  font-size: 16px;
+  line-height: 19px;
+  letter-spacing: 0.2em;
+  text-transform: uppercase;
+  color: #000000;
+}
+.catalog-filter-title{
+  font-family: 'Rubik' sans-serif;
+  font-style: normal;
+  font-weight: 700;
+  font-size: 18px;
+  line-height: 20px;
+  letter-spacing: -0.02em;
+  color: #000000;
+}
+.catalog-filter-item{
+  font-family: 'Rubik' sans-serif;
+  font-style: normal;
+  font-weight: 400;
+  font-size: 16px;
+  line-height: 20px;
+  color: #000000;
+}
+.catalog-filter-title{
+  font-family: 'Rubik' sans-serif;
+  font-style: normal;
+  font-weight: 700;
+  font-size: 18px;
+  line-height: 20px;
+  letter-spacing: -0.02em;
+  color: #000000;
+}
+.show-filter{
+  font-family: 'Raleway' sans-serif;
+  font-style: normal;
+  font-weight: 800;
+  font-size: 18px;
+  line-height: 21px;
+  text-align: center;
+  letter-spacing: 0.2em;
+  text-decoration: none;
+  text-transform: uppercase;
+  color: #000000;
+}
+.sort{
+  font-family: 'Raleway' sans-serif;
+  font-style: normal;
+  font-weight: 800;
+  font-size: 16px;
+  line-height: 19px;
+  letter-spacing: 0.2em;
+  text-transform: uppercase;
+  color: #000000;
+}
+.select-control{
+  font-family: 'Rubik' sans-serif;
+  font-style: normal;
+  font-weight: 400;
+  font-size: 18px;
+  line-height: 30px;
+  color: #000000;
+}
+.product-card-link{
+  font-family: 'Rubik';
+  font-style: normal;
+  font-weight: 700;
+  font-size: 18px;
+  line-height: 20px;
+  letter-spacing: -0.02em;
+  color: #000000;
+  text-decoration: none;
+}
+.product-card-price{
+  font-family: 'Rubik' sans-serif;
+  font-style: normal;
+  font-weight: 400;
+  font-size: 18px;
+  line-height: 21px;
+  text-align: right;
+  color: #444444;
+}
+.show-more{
+  font-family: 'Raleway' sans-serif;
+  font-style: normal;
+  font-weight: 800;
+  font-size: 16px;
+  line-height: 19px;
+  display: flex;
+  align-items: center;
+  text-align: center;
+  letter-spacing: 0.2em;
+  text-transform: uppercase;
+  text-decoration: none;
+  color: #000000;
+}
+.back{
+  font-family: 'Raleway' sans-serif;
+  font-style: normal;
+  font-weight: 800;
+  font-size: 18px;
+  line-height: 21px;
+  display: flex;
+  align-items: center;
+  letter-spacing: 0.2em;
+  text-transform: uppercase;
+  color: #444444;
+  opacity: 0.3;
+}
+.forward{
+  font-family: 'Raleway' sans-serif;
+  font-style: normal;
+  font-weight: 800;
+  font-size: 18px;
+  line-height: 21px;
+  display: flex;
+  align-items: center;
+  letter-spacing: 0.2em;
+  text-transform: uppercase;
+  text-decoration: none;
+  color: #000000;
+}
+.pagination-link{
+  font-family: 'Rubik' sans-serif;
+  font-style: normal;
+  font-weight: 400;
+  font-size: 16px;
+  line-height: 20px;
+  text-align: center;
+  color: #444444;
+  opacity: 0.6;
 }
