--- a/styles/style.css
+++ b/styles/style.css
@@ -45,6 +45,32 @@ background-color: #FFFFFF;
   text-decoration: none;
   font-weight: 400;
 }
+
+.person-area::before{
+  position: absolute;
+  left: 6.67%;
+  right: 6.67%;
+  top: 0%;
+  bottom: 0%;
+  background-image: #000000;
+}
+.basket-header::before{
+  position: absolute;
+  width: 21px;
+  height: 21px;
+  left: -18px;
+  top: 0px;
+
+  font-family: 'Rubik';
+  font-style: normal;
+  font-weight: 400;
+  font-size: 14px;
+  line-height: 17px;
+  display: flex;
+  align-items: center;
+  text-align: center;
+}
+
 .navigation-link-2{
   font-family: 'Raleway';
   font-size: 18px;
@@ -156,6 +182,15 @@ background-color: #FFFFFF;
   font-size: 50px;
   line-height: 50px;
   color: #000000;
+}
+
+.delivery-image::after{
+  position: absolute;
+  left: 10.18%;
+  right: 2.72%;
+  top: 22.21%;
+  bottom: 3.93%;
+  background-image: #3A3A3A;
 }
 
 .delivery-discription{
